// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchIcon renders 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M11.5 21a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19ZM22 22l-2-2"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`SearchIcon renders with custom size 1`] = `
<div>
  <svg
    fill="none"
    height="200"
    viewBox="0 0 24 24"
    width="200"
  >
    <path
      d="M11.5 21a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19ZM22 22l-2-2"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`SearchIcon renders with custom width/height 1`] = `
<div>
  <svg
    fill="none"
    height="10"
    viewBox="0 0 24 24"
    width="10"
  >
    <path
      d="M11.5 21a9.5 9.5 0 1 0 0-19 9.5 9.5 0 0 0 0 19ZM22 22l-2-2"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;
